add the coloumn  filter in all modules components

--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -42,6 +42,9 @@
               </a>
               <ul *ngIf="hasItems(subitem)" class="sub-menu mm-collapse" aria-expanded="false">
                 <li *ngFor="let subSubitem of subitem.subItems">
+
+                <li *ngFor="let subSubitem of subitem.subItems">
+                <li *ngFor="let subSubitem of subitem.subItems" >
                   <a [attr.data-parent]="subSubitem.parentId" routerLink="{{subSubitem.link}}" routerLinkActive="active"
                     class="side-nav-link-ref">
                     {{ subSubitem.label | translate }}
