--- a/src/app/pages/sales/customer-ci-grade-per-kg-rate-realization/customer-ci-grade-per-kg-rate-realization.component.html
+++ b/src/app/pages/sales/customer-ci-grade-per-kg-rate-realization/customer-ci-grade-per-kg-rate-realization.component.html
@@ -108,68 +108,68 @@
                 <tr>
                   
                       
-                    <th class="td_left" style="width: 20%;">Customer Name
+                    
+                    <th class="td_left" style="width: 20%;">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('CustomerName')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CustomerName']}">
-                          <div class="filter-option" (click)="applyFilter('CustomerName', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['CustomerName']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('CustomerName')">
-                          </div>
+                        Customer Name
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('CustomerName')"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CustomerName']}">
+                        <div class="filter-option" (click)="applyFilter('CustomerName', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['CustomerName']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('CustomerName')">
                         </div>
                       </div>
                     </th>
-                    <th class="td_right">Quarter 01
+                    
+                    <th scope="col"  class="td_right">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('Quarter01')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Quarter01']}">
-                          <div class="filter-option" (click)="applyFilter('Quarter01', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['Quarter01']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Quarter01')">
-                          </div>
+                        Quarter 01
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('Quarter01')"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Quarter01']}">
+                        <div class="filter-option" (click)="applyFilter('Quarter01', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['Quarter01']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('Quarter01')">
                         </div>
                       </div>
                     </th>
-                    <th class="td_right">Quarter 02
+                    
+                    <th scope="col"  class="td_right">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('Quarter02')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Quarter02']}">
-                          <div class="filter-option" (click)="applyFilter('Quarter02', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['Quarter02']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Quarter02')">
-                          </div>
+                        Quarter 02
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('Quarter02')"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Quarter02']}">
+                        <div class="filter-option" (click)="applyFilter('Quarter02', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['Quarter02']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('Quarter02')">
                         </div>
                       </div>
                     </th>
-                    <th class="td_right">Quarter 03
+                   
+                    <th scope="col"  class="td_right">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('Quarter03')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Quarter03']}">
-                          <div class="filter-option" (click)="applyFilter('Quarter03', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['Quarter03']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Quarter03')">
-                          </div>
+                        Quarter 03
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('Quarter03')"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Quarter03']}">
+                        <div class="filter-option" (click)="applyFilter('Quarter03', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['Quarter03']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('Quarter03')">
                         </div>
                       </div>
                     </th>
-                    <th class="td_right">Quarter 04
+                  
+                    <th scope="col"  class="td_right">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('Quarter04')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Quarter04']}">
-                          <div class="filter-option" (click)="applyFilter('Quarter04', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['Quarter04']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Quarter04')">
-                          </div>
+                        Quarter 04
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('Quarter04')"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Quarter04']}">
+                        <div class="filter-option" (click)="applyFilter('Quarter04', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['Quarter04']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('Quarter04')">
                         </div>
                       </div>
                     </th>
