--- a/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
+++ b/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
@@ -111,107 +111,108 @@
                     </div>
                 </th>
                 <tr>
-                  <th class="td_right">Sr. No.
+                  
+                  <th class="td_right">
                     <div class="filter-container">
-                      <div class="filter-toggle" (click)="toggleFilter('Sr.No.')">
-                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                      </div>
-                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Sr.No.']}">
-                        <div class="filter-option" (click)="applyFilter('Sr.No.', 'Option 1')">Filter</div>
-                        <div class="input-box" [class.show-input]="isFilterInputOpen['Sr.No.']">
-                          <input type="text" placeholder=" " (blur)="toggleFilterInput('Sr.No.')">
-                        </div>
+                      Sr. No. 
+                      <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('SrNo')"></span>
+                    </div>
+                    <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['SrNo']}">
+                      <div class="filter-option" (click)="applyFilter('SrNo', 'Option 1')">Filter</div>
+                      <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['SrNo']}">
+                        <input type="text" placeholder="" (blur)="toggleFilterInput('SrNo')">
                       </div>
                     </div>
                   </th>
-                  <th class="td_left" style="width: 30%;">Supplier Name
+                    
+                  
+                  <th class="td_left" style="width: 30%;">
                     <div class="filter-container">
-                      <div class="filter-toggle" (click)="toggleFilter('SupplierName')">
-                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                      </div>
-                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['SupplierName']}">
-                        <div class="filter-option" (click)="applyFilter('SupplierName', 'Option 1')">Filter</div>
-                        <div class="input-box" [class.show-input]="isFilterInputOpen['SupplerName']">
-                          <input type="text" placeholder=" " (blur)="toggleFilterInput('SupplerName')">
-                        </div>
+                      Supplier Name
+                      <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('SupplierName')"></span>
+                    </div>
+                    <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['SupplierName']}">
+                      <div class="filter-option" (click)="applyFilter('SupplierName', 'Option 1')">Filter</div>
+                      <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['SupplierName']}">
+                        <input type="text" placeholder="" (blur)="toggleFilterInput('SupplierName')">
                       </div>
                     </div>
                   </th>
-                  <th class="td_right">Receipt Qty
+                  
+                  <th class="td_right">
                     <div class="filter-container">
-                      <div class="filter-toggle" (click)="toggleFilter('ReceiptQty')">
-                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                      </div>
-                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['ReceiptQty']}">
-                        <div class="filter-option" (click)="applyFilter('ReceiptQty', 'Option 1')">Filter</div>
-                        <div class="input-box" [class.show-input]="isFilterInputOpen['ReceiptQty']">
-                          <input type="text" placeholder=" " (blur)="toggleFilterInput('ReceiptQty')">
-                        </div>
+                      Receipt Qty
+                      <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('ReceiptQty')"></span>
+                    </div>
+                    <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['ReceiptQty']}">
+                      <div class="filter-option" (click)="applyFilter('ReceiptQty', 'Option 1')">Filter</div>
+                      <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['ReceiptQty']}">
+                        <input type="text" placeholder="" (blur)="toggleFilterInput('ReceiptQty')">
                       </div>
                     </div>
                   </th>
-                  <th class="td_right">CR Qty
+                 
+                  <th class="td_right">
                     <div class="filter-container">
-                      <div class="filter-toggle" (click)="toggleFilter('CRQty')">
-                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                      </div>
-                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CRQty']}">
-                        <div class="filter-option" (click)="applyFilter('CRQty', 'Option 1')">Filter</div>
-                        <div class="input-box" [class.show-input]="isFilterInputOpen['CRQty']">
-                          <input type="text" placeholder=" " (blur)="toggleFilterInput('CRQty')">
-                        </div>
+                      CR Qty
+                      <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('CRQty')"></span>
+                    </div>
+                    <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CRQty']}">
+                      <div class="filter-option" (click)="applyFilter('CRQty', 'Option 1')">Filter</div>
+                      <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['CRQty']}">
+                        <input type="text" placeholder="" (blur)="toggleFilterInput('CRQty')">
                       </div>
                     </div>
-                  </th>
-                  <th class="td_right">Receipt Tonnage
+                  </th> 
+                  
+                  <th class="td_right">
                     <div class="filter-container">
-                      <div class="filter-toggle" (click)="toggleFilter('ReceiptTonnage')">
-                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                      </div>
-                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['ReceiptTonnage']}">
-                        <div class="filter-option" (click)="applyFilter('ReceiptTonnage', 'Option 1')">Filter</div>
-                        <div class="input-box" [class.show-input]="isFilterInputOpen['ReceiptTonnage']">
-                          <input type="text" placeholder=" " (blur)="toggleFilterInput('ReceiptTonnage')">
-                        </div>
+                      Receipt Tonnage
+                      <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('ReceiptTonnage')"></span>
+                    </div>
+                    <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['ReceiptTonnage']}">
+                      <div class="filter-option" (click)="applyFilter('ReceiptTonnage', 'Option 1')">Filter</div>
+                      <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['ReceiptTonnage']}">
+                        <input type="text" placeholder="" (blur)="toggleFilterInput('ReceiptTonnage')">
                       </div>
                     </div>
-                  </th>
-                  <th class="td_right">CR Tonnage
+                  </th> 
+                  
+                  <th class="td_right">
                     <div class="filter-container">
-                      <div class="filter-toggle" (click)="toggleFilter('CRTonnage')">
-                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                      </div>
-                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CRTonnage']}">
-                        <div class="filter-option" (click)="applyFilter('CRTonnage', 'Option 1')">Filter</div>
-                        <div class="input-box" [class.show-input]="isFilterInputOpen['CRTonnage']">
-                          <input type="text" placeholder=" " (blur)="toggleFilterInput('CRTonnage')">
-                        </div>
+                      CR Tonnage
+                      <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('CRTonnage')"></span>
+                    </div>
+                    <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CRTonnage']}">
+                      <div class="filter-option" (click)="applyFilter('CRTonnage', 'Option 1')">Filter</div>
+                      <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['CRTonnage']}">
+                        <input type="text" placeholder="" (blur)="toggleFilterInput('CRTonnage')">
                       </div>
                     </div>
-                  </th>
-                  <th class="td_right">CR % On Tonnage
+                  </th> 
+                 
+                  <th class="td_right">
                     <div class="filter-container">
-                      <div class="filter-toggle" (click)="toggleFilter('CR%OnTonnage')">
-                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                      </div>
-                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CR%OnTonnage']}">
-                        <div class="filter-option" (click)="applyFilter('CR%OnTonnage', 'Option 1')">Filter</div>
-                        <div class="input-box" [class.show-input]="isFilterInputOpen['CR%OnTonnage']">
-                          <input type="text" placeholder=" " (blur)="toggleFilterInput('CR%OnTonnage')">
-                        </div>
+                      CR % On Tonnage
+                      <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('CR%OnTonnage')"></span>
+                    </div>
+                    <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CR%OnTonnage']}">
+                      <div class="filter-option" (click)="applyFilter('CR%OnTonnage', 'Option 1')">Filter</div>
+                      <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['CR%OnTonnage']}">
+                        <input type="text" placeholder="" (blur)="toggleFilterInput('CR%OnTonnage')">
                       </div>
                     </div>
-                  </th>
-                  <th class="td_left">Rejection Details
+                  </th> 
+                 
+                  <th class="td_left move-left">
                     <div class="filter-container">
-                      <div class="filter-toggle" (click)="toggleFilter('RejectionDetails')">
-                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                      </div>
-                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['RejectionDetails']}">
-                        <div class="filter-option" (click)="applyFilter('CR%OnTonnage', 'Option 1')">Filter</div>
-                        <div class="input-box" [class.show-input]="isFilterInputOpen['RejectionDetails']">
-                          <input type="text" placeholder=" " (blur)="toggleFilterInput('RejectionDetails')">
-                        </div>
+                      Rejection Details
+                      <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('RejectionDetails')"></span>
+                    </div>
+                    <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['RejectionDetails']}">
+                      <div class="filter-option" (click)="applyFilter('RejectionDetails', 'Option 1')">Filter</div>
+                      <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['RejectionDetails']}">
+                        <input type="text" placeholder="" (blur)="toggleFilterInput('RejectionDetails')">
                       </div>
                     </div>
                   </th>
