--- a/src/app/pages/quality-control/customer-wise-complaints-received/customer-wise-complaints-received.component.html
+++ b/src/app/pages/quality-control/customer-wise-complaints-received/customer-wise-complaints-received.component.html
@@ -71,20 +71,6 @@
     </form>
 </div>
 
-<div class="row" style="margin-top: 1px;" *ngIf="showtable">
-    <div class="col-lg">
-        <div class="card">
-            <div class="card-body">
-                <div class="chartjs-chart">
-                    <!-- Bar Chart -->
-                    <canvas baseChart [datasets]="datasets" chartType="bar" [options]="options" height="300" [labels]="labels">
-                    </canvas>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
 <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
     <div class="col-12">
         <div class="table-responsive">
@@ -103,30 +89,30 @@
                                     </div>
                                 </th>
                                 <tr>
-                                    <th scope="col" class="td_left">Customer Name
-                                        <div class="filter-container">
-                                            <div class="filter-toggle" (click)="toggleFilter('CustomerName')">
-                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                                   
+                                         <th class="td_left" style="width: 20%;">
+                                            <div class="filter-container">
+                                              Customer Name
+                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('CustomerName')"></span>
                                             </div>
                                             <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CustomerName']}">
                                               <div class="filter-option" (click)="applyFilter('CustomerName', 'Option 1')">Filter</div>
-                                              <div class="input-box" [class.show-input]="isFilterInputOpen['CustomerName']">
-                                                <input type="text" placeholder=" " (blur)="toggleFilterInput('CustomerName')">
+                                              <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['CustomerName']}">
+                                                <input type="text" placeholder="" (blur)="toggleFilterInput('CustomerName')">
                                               </div>
                                             </div>
-                                          </div>
-
-                                    </th>
-                                    <th scope="col" class="td_left" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
-                                        <div class="filter-container">
-                                          <div class="filter-toggle" (click)="toggleFilter(data.VALUE)">
-                                            <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                                          </div>
-                                          <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[data.VALUE]}">
-                                            <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
-                                            <div class="input-box" [class.show-input]="isFilterInputOpen[data.VALUE]">
-                                              <input type="text" placeholder=" " (blur)="toggleFilterInput(data.VALUE)">
-                                            </div>
+                                          </th>   
+                                    
+                                      <th scope="col" class="td_left" *ngFor="let data of Headers" style="text-align: right;">
+                   
+                                        <div class="filter-container">{{data.VALUE}}
+                                          
+                                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter(data.VALUE)"></span>
+                                        </div>
+                                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[data.VALUE]}">
+                                          <div class="filter-option" (click)="applyFilter('column' , 'Option 1')">Filter</div>
+                                          <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen[data.VALUE]}">
+                                            <input type="text" placeholder="" (blur)="toggleFilterInput(data.VALUE)">
                                           </div>
                                         </div>
                                       </th>
@@ -152,3 +138,16 @@
     </div>
 </div>
 
+<div class="row" style="margin-top: 1px;" *ngIf="showtable">
+    <div class="col-lg">
+        <div class="card">
+            <div class="card-body">
+                <div class="chartjs-chart">
+                    <!-- Bar Chart -->
+                    <canvas baseChart [datasets]="datasets" chartType="bar" [options]="options" height="300" [labels]="labels">
+                    </canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
