--- a/src/app/pages/quality-control/customer-wise-complaints-received/customer-wise-complaints-received.component.scss
+++ b/src/app/pages/quality-control/customer-wise-complaints-received/customer-wise-complaints-received.component.scss
@@ -1,1 +1,14 @@
+.loader {
+    position: absolute;
+    top: 45%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+}
+
+th:last-child .filter-options {
+    position: absolute !important;
+    border-top: none !important;
+    border-radius: 0 0 4px 4px !important;
+    right: 0 !important; /* Position to the right */
+    }
 
