--- a/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
+++ b/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
@@ -84,85 +84,81 @@
                                     </div>
                                 </th>
                                 <tr>
-                                    <th class="td_left" style="width: 20%;">Customer Name
+                                    
+                                    <th class="td_left" style="width: 20%;">
                                         <div class="filter-container">
-                                            <div class="filter-toggle" (click)="toggleFilter('CustomerName')">
-                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                                            </div>
-                                            <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CustomerName']}">
-                                              <div class="filter-option" (click)="applyFilter('CustomerName', 'Option 1')">Filter</div>
-                                              <div class="input-box" [class.show-input]="isFilterInputOpen['CustomerName']">
-                                                <input type="text" placeholder=" " (blur)="toggleFilterInput('CustomerName')">
-                                              </div>
-                                            </div>
+                                          Customer Name
+                                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('CustomerName')"></span>
+                                        </div>
+                                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CustomerName']}">
+                                          <div class="filter-option" (click)="applyFilter('CustomerName', 'Option 1')">Filter</div>
+                                          <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['CustomerName']}">
+                                            <input type="text" placeholder="" (blur)="toggleFilterInput('CustomerName')">
                                           </div>
-                                    </th>
-                                    <th class="td_right">VA %
-                                        <div class="filter-container">
-                                            <div class="filter-toggle" (click)="toggleFilter('VA%')">
-                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                                            </div>
-                                            <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['VA%']}">
-                                              <div class="filter-option" (click)="applyFilter('VA%', 'Option 1')">Filter</div>
-                                              <div class="input-box" [class.show-input]="isFilterInputOpen['VA%']">
-                                                <input type="text" placeholder=" " (blur)="toggleFilterInput('VA%')">
-                                              </div>
-                                            </div>
+                                        </div>
+                                      </th>
+                                      
+                            
+                                    <th class="td_right">
+                                        <div class="filter-container">VA %
+                                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('VA%')"></span>
+                                        </div>
+                                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['VA%']}">
+                                          <div class="filter-option" (click)="applyFilter('VA%', 'Option 1')">Filter</div>
+                                          <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['VA%']}">
+                                            <input type="text" placeholder="" (blur)="toggleFilterInput('VA%')">
                                           </div>
+                                        </div>
+                                   </th>
+                                  
+                                    <th class="td_right">
+                                        <div class="filter-container"> Planned Sale 
+                                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('PlannedSale')"></span>
+                                        </div>
+                                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['PlannedSale']}">
+                                          <div class="filter-option" (click)="applyFilter('PlannedSale', 'Option 1')">Filter</div>
+                                          <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['PlannedSale']}">
+                                            <input type="text" placeholder="" (blur)="toggleFilterInput('PlannedSale')">
+                                          </div>
+                                        </div>
+                                   </th>
+                                   
+                                    <th class="td_right">
+                                        <div class="filter-container"> Actual Sale
+                                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('ActualSale')"></span>
+                                        </div>
+                                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['ActualSale']}">
+                                          <div class="filter-option" (click)="applyFilter('ActualSale', 'Option 1')">Filter</div>
+                                          <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['ActualSale']}">
+                                            <input type="text" placeholder="" (blur)="toggleFilterInput('ActualSale')">
+                                          </div>
+                                        </div>
+                                   </th>
+                                   
+                                    <th class="td_right">
+                                        <div class="filter-container">Difference
+                                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('Difference')"></span>
+                                        </div>
+                                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Difference']}">
+                                          <div class="filter-option" (click)="applyFilter('Difference', 'Option 1')">Filter</div>
+                                          <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['Difference']}">
+                                            <input type="text" placeholder="" (blur)="toggleFilterInput('Difference')">
+                                          </div>
+                                        </div>
+                                   </th>
 
-                                    </th>
-                                    <th class="td_right">Planned Sale 
-                                        <div class="filter-container">
-                                            <div class="filter-toggle" (click)="toggleFilter('PlannedSale')">
-                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                                            </div>
-                                            <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['PlannedSale']}">
-                                              <div class="filter-option" (click)="applyFilter('PlannedSale', 'Option 1')">Filter</div>
-                                              <div class="input-box" [class.show-input]="isFilterInputOpen['PlannedSale']">
-                                                <input type="text" placeholder=" " (blur)="toggleFilterInput('PlannedSale')">
-                                              </div>
-                                            </div>
+                                    
+                                    <th class="td_right">
+                                        <div class="filter-container">VA Effect 
+                                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('VA Effect ')"></span>
+                                        </div>
+                                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['VA Effect ']}">
+                                          <div class="filter-option" (click)="applyFilter('VA Effect ', 'Option 1')">Filter</div>
+                                          <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['VA Effect ']}">
+                                            <input type="text" placeholder="" (blur)="toggleFilterInput('VA Effect ')">
                                           </div>
-                                    </th>
-                                    <th class="td_right">Actual Sale
-                                        <div class="filter-container">
-                                            <div class="filter-toggle" (click)="toggleFilter('ActualSale')">
-                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                                            </div>
-                                            <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['ActualSale']}">
-                                              <div class="filter-option" (click)="applyFilter('ActualSale', 'Option 1')">Filter</div>
-                                              <div class="input-box" [class.show-input]="isFilterInputOpen['ActualSale']">
-                                                <input type="text" placeholder=" " (blur)="toggleFilterInput('ActualSale')">
-                                              </div>
-                                            </div>
-                                          </div>
-                                    </th>
-                                    <th class="td_right">Difference
-                                        <div class="filter-container">
-                                            <div class="filter-toggle" (click)="toggleFilter('Difference')">
-                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                                            </div>
-                                            <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Difference']}">
-                                              <div class="filter-option" (click)="applyFilter('Difference', 'Option 1')">Filter</div>
-                                              <div class="input-box" [class.show-input]="isFilterInputOpen['Difference']">
-                                                <input type="text" placeholder=" " (blur)="toggleFilterInput('Difference')">
-                                              </div>
-                                            </div>
-                                          </div>
-                                    </th>
-                                    <th class="td_right">VA Effect 
-                                        <div class="filter-container">
-                                            <div class="filter-toggle" (click)="toggleFilter('VAEffect')">
-                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                                            </div>
-                                            <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['VAEffect']}">
-                                              <div class="filter-option" (click)="applyFilter('VAEffect', 'Option 1')">Filter</div>
-                                              <div class="input-box" [class.show-input]="isFilterInputOpen['VAEffect']">
-                                                <input type="text" placeholder=" " (blur)="toggleFilterInput('VAEffect')">
-                                              </div>
-                                            </div>
-                                          </div>
-                                    </th>
+                                        </div>
+                                   </th>  
                                 </tr>
 
                                    
