--- a/src/app/pages/sales/enquiry-register/enquiry-register.component.html
+++ b/src/app/pages/sales/enquiry-register/enquiry-register.component.html
@@ -102,120 +102,121 @@
                       </div>
                     </th>
                     </tr> -->
-                    <th class="td_right">Sr.No.
+                   
+                  
+                    <th class="td_right">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('SrNo')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['SrNo']}">
-                          <div class="filter-option" (click)="applyFilter('SrNo', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['SrNo']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('SrNo')">
-                          </div>
+                        Sr. No. 
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('SrNo')"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['SrNo']}">
+                        <div class="filter-option" (click)="applyFilter('SrNo', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['SrNo']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('SrNo')">
                         </div>
                       </div>
                     </th>
-                    <th class="td_left">Enquiry Number
+                    
+                    <th class="td_left">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('EnquiryNumber')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['EnquiryNumber']}">
-                          <div class="filter-option" (click)="applyFilter('EnquiryNumber', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['EnquiryNumber']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('EnquiryNumber')">
-                          </div>
+                        Enquiry Number 
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('EnquiryNumber')"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['EnquiryNumber']}">
+                        <div class="filter-option" (click)="applyFilter('EnquiryNumber', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['EnquiryNumber']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('EnquiryNumber')">
                         </div>
                       </div>
                     </th>
-                    <th>Date
+                   
+                    <th>
+                    <div class="filter-container">
+                      Date
+                      <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter(' Date')"></span>
+                    </div>
+                    <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[' Date']}">
+                      <div class="filter-option" (click)="applyFilter(' Date', 'Option 1')">Filter</div>
+                      <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen[' Date']}">
+                        <input type="text" placeholder="" (blur)="toggleFilterInput(' Date')">
+                      </div>
+                    </div>
+                  </th>
+                   
+                    <th  class="td_left">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('Date')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Date']}">
-                          <div class="filter-option" (click)="applyFilter('Date', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['Date']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Date')">
-                          </div>
+                          Customer
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('Customer')"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Customer']}">
+                        <div class="filter-option" (click)="applyFilter('Customer', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['Customer']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('Customer')">
                         </div>
                       </div>
                     </th>
-                    <th class="td_left">Customer
+                    
+                    <th  class="td_left">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('Customer')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Customer']}">
-                          <div class="filter-option" (click)="applyFilter('Customer', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['Customer']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Customer')">
-                          </div>
+                        RFQ.No./Ref.
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('RFQNoRef')"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['RFQNoRef']}">
+                        <div class="filter-option" (click)="applyFilter('RFQNoRef', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['RFQNoRef']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('RFQNoRef')">
                         </div>
                       </div>
                     </th>
-                    <th class="td_left">RFQ.No./Ref.
+                    
+                    <th scope="col"  class="td_left">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('RFQNoRef')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['RFQNoRef']}">
-                          <div class="filter-option" (click)="applyFilter('RFQNoRef', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['RFQNoRef']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('RFQNoRef')">
-                          </div>
+                        Material
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('Material')"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Material']}">
+                        <div class="filter-option" (click)="applyFilter('Material', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['Material']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('Material')">
                         </div>
                       </div>
                     </th>
-                    <th class="td_left">Material
+                    
+                    <th   class="td_left">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('Material')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Material']}">
-                          <div class="filter-option" (click)="applyFilter('Material', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['Material']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Material')">
-                          </div>
+                        Part Code
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('PartCode')"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['PartCode']}">
+                        <div class="filter-option" (click)="applyFilter('PartCode', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['PartCode']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('PartCode')">
                         </div>
                       </div>
                     </th>
-                    <th class="td_left">Part Code
+                    
+                    <th   class="td_right">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('PartCode')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['PartCode']}">
-                          <div class="filter-option" (click)="applyFilter('PartCode', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['PartCode']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('PartCode')">
-                          </div>
+                        Oty
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('Oty')"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Oty']}">
+                        <div class="filter-option" (click)="applyFilter('Oty', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['Oty']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('Oty')">
                         </div>
                       </div>
                     </th>
-                    <th class="td_right">Oty
+                    
+                    <th   class="td_left">
                       <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('Oty')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Oty']}">
-                          <div class="filter-option" (click)="applyFilter('Oty', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['Oty']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Oty')">
-                          </div>
-                        </div>
+                        Remark
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true" (click)="toggleFilter('Remark')"></span>
                       </div>
-                    </th>
-                    <th class="td_left">Remark
-                      <div class="filter-container">
-                        <div class="filter-toggle" (click)="toggleFilter('Remark')">
-                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
-                        </div>
-                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Remark']}">
-                          <div class="filter-option" (click)="applyFilter('Remark', 'Option 1')">Filter</div>
-                          <div class="input-box" [class.show-input]="isFilterInputOpen['Remark']">
-                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Remark')">
-                          </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Remark']}">
+                        <div class="filter-option" (click)="applyFilter('Remark', 'Option 1')">Filter</div>
+                        <div class="input-box" [ngClass]="{'show-input': isFilterInputOpen['Remark']}">
+                          <input type="text" placeholder="" (blur)="toggleFilterInput('Remark')">
                         </div>
                       </div>
                     </th>
