--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@
   }
 }
 
-.c .carousel-item {
+.carousel-item {
   transition: opacity 0.7s ease !important;
   position: absolute !important;
   display: block !important;
@@ -55,21 +55,19 @@ thead {
 tr:nth-child(even) {
   background-color: #f2f2f2;
 }
-
 // .Ahead th{
 //   background: #b8cfee !important;
 //   margin: -1% !important;
 // }
-select {
+select{
   width: 25px;
-
+  
 }
 
 
 
 tfoot {
   background-color: #f1f2f4;
-  
 }
 
 .card {
@@ -140,14 +138,12 @@ body[data-sidebar=dark] .navbar-brand-box {
 
 h5,
 .h5 {
-  font-size: 15px !important;
+  font-size: 12px !important;
   font-weight: 700 !important;
-  color:#564496 !important;
+  color: #04408C !important;
   text-align: center !important;
   line-height: 0.2 !important;
-  //align-items: center !important;
 }
-
 
 
 .form-control {
@@ -167,11 +163,9 @@ h5,
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-
 .table-fixed {
   display: block;
- height: 450px;
-  
+  height: 450px;
 }
 
 
@@ -201,6 +195,10 @@ table td.newhighlight {
 th,
 td {
   vertical-align: middle;
+  white-space: nowrap !important;
+  min-width: 20% !important; /* Adjust the minimum width as needed */
+  text-align: left !important;
+  padding: 8px !important;
 }
 
 
@@ -210,17 +208,16 @@ td {
 //   width: 200000px;
 // }
 
-// .table {
+.table {
 
-//   --bs-table-hover-bg: #dfe6ec !important;
-//   table-layout: auto;
-//   width: 100%;
-//   white-space: nowrap;
+  --bs-table-hover-bg: #dfe6ec !important;
+  table-layout: auto;
+  width: 100%;
+  white-space: nowrap;
+  
 
-
-// }
-
-.marginTable {
+}
+.marginTable{
   margin: 25px !important;
   //position: fixed !important;
 }
@@ -246,8 +243,8 @@ html {
 .ng-dropdown-panel .scroll-host {
 
   position: fixed !important;
-  //width: fit-content !important;
-  width: 106px !important;
+  width: fit-content !important;
+
 }
 
 
@@ -287,81 +284,57 @@ body {
   display: inline-block !important;
 }
 
-.filter-label {
-  font-weight: bold !important;
-  margin-right: 10px !important;
-}
 
-.filter-toggle {
-  cursor: pointer !important;
-  display: inline-block !important;
-  padding: 0 5px !important;
-  border: 1px solid #ccc !important;
-  border-radius: 4px !important;
-}
+ .filter-options {
+   display: none!important;
+    position: absolute!important;
+     background-color: #fff!important;
+    border: 1px solid #ccc!important;
+    border-top: none!important;
+    border-radius: 0 0 4px 4px!important;
+    z-index: 1!important;
+    
+    
+ }
 
-.filter-icon {
-  display: inline-block !important;
-  vertical-align: middle !important;
-  margin-left: 5px !important;
-  transform: rotate(0deg) !important;
-  transition: transform 0.2s ease !important;
-}
-
-.filter-options {
-  display: none !important;
-  position: absolute !important;
-  background-color: #fff !important;
-  border: 1px solid #ccc !important;
-  border-top: none !important;
-  border-radius: 0 0 4px 4px !important;
-  z-index: 1 !important;
-}
-
-.show-filter-options {
-  display: block !important;
+  .show-filter-options {
+  display: block!important;
+  
 }
 
 .filter-option {
-  padding: 4px !important;
-  cursor: pointer !important;
-  transition: background-color 0.2s ease !important;
-  width: 100px !important;
-  border: 1px solid #ccc !important;
+  padding: 4px!important;
+  //cursor: pointer!important;
+  transition: background-color 0.2s ease!important;
+  width: 50px!important;
+  border: 1px solid #ccc!important;
+  border-radius: 4px!important;
+  display: inline-block!important;
+  text-align: left !important;
+ }
+
+  .input-box {
+  display: inline-block !important;
+  border: 1px solid #ccc !important; 
   border-radius: 4px !important;
-  display: inline-block !important;
+   margin-top: 2px !important;
+   padding: 3px !important;
+  left: 0 !important;
+  } 
 
 
+
+.show-input .filter-option {
+  display: inline-block!important;
+  
 }
-
-.filter-option input {
-  float: left !important;
-}
-
-
-// .filter-option:hover {
-//   background-color: #f0f0f0!important;
-// }
-
-.input-box {
-  display: inline-block !important;
-  border: 1px solid #ccc !important;
-  border-radius: 4px !important;
-  margin-top: 2px !important;
-  padding: 3px !important;
-
-}
-
-.show-input {
-  display: inline-block !important;
-}
-
 .search-container {
   display: flex !important;
-  align-items: center !important;
-  background-color: #f2f2f2 !important;
+  align-items:center !important;
+  background-color:#f2f2f2 !important;
   text-align: left !important;
-
+  
+  
 }
 
 .search-container input {
@@ -371,32 +344,17 @@ body {
   border-width: 1px !important;
   border-style: solid !important;
   border-color: #b5b8c8 !important;
-  width: 300px !important;
+  width: 300px!important;
 }
+.input-box input{
+  width: 100px !important;
+  }
 
-h5 {
-  font-size: 15px;
-}
-
-.fa-fw {
-  text-align: left !important;
-  width: 25.25em !important;
-}
-.table { 
- 
-  border-collapse: separate !important;
-    border-spacing: 0 !important;
-}
-
-.table {
-
-  --bs-table-hover-bg: #dfe6ec !important;
-  table-layout: auto ;
-  width: 100%;
-  white-space: nowrap;
-}
-.ng-select.ng-select-opened.ng-select-bottom>.ng-select-container {
-  
-  width: 106px !important;
-}
-
+  //  th:last-child .filter-options {
+  //  position: absolute !important;
+  //  border-top: none !important;
+  //  border-radius: 0 0 4px 4px !important;
+  //  right: 0 !important; /* Position to the right */
+  //  }
+    
+   
